anthos/namespaces/app1/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - dev.davita.internal
    secretName: dev-davita-internal
  rules:
    - host: dev.davita.internal
      http:
        paths:
        - path: /
          backend:
            serviceName: hostname
            servicePort: 80
